Added make_outcome_choice_voting test scenario. Added playerIds array to updateStory function. Added done status to make_outcome_choice_voting